fix(search): minor alignment fixes

--- a/src/app/components/layout/smart-search/smart-search.sass
+++ b/src/app/components/layout/smart-search/smart-search.sass
@@ -31,6 +31,7 @@ $horizontal-padding: 2rem
 
         i.material-icons
             margin-right: .25rem
+            margin-left: -5px
             font-size: 35px
             color: $uni-color-toolbar
 
@@ -70,13 +71,13 @@ $horizontal-padding: 2rem
         height: 40px
 
         &.header
-            padding: 1rem .25rem 2px
+            padding: 1rem 0 2px
             text-transform: uppercase
             font-weight: bold
             font-size: 13px
 
         &:not(.header)
-            padding: .5rem
+            padding: .5rem 5px
             cursor: pointer
             border-radius: 3px
 
